# hn-jobs-learning-scraper

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  STATUS.md  boilerplate_generator.py  cheap_reader.py  pyproject.toml  skills-lock.json
.claude/: settings.json
.claude/hooks/: pre-bash-firewall.sh
data/digests/: 47601859-graduated.md  47975571-graduated.md  47975571-naive.md
docs/: Improvements-Backlog.md  architecture.md  glossary.md
docs/decisions/: 001-thread-discovery.md  002-extract-job-schema.md  003-graduated-discovery.md
docs/slices/: slice-01-naive.md  slice-02-graduated.md
hn_scraper/: compare.py  config.py  firebase_api.py  graduated.py  learner.py  llm.py  logging_setup.py  models.py  naive_scraper.py  pricing.py
hn_scraper/cli/: __init__.py
hn_scraper/prompts/: README.md  __init__.py  digest_header_polish_system.md  extract_job.md  extract_jobs_batch.md  learn_loop_system.md  skill_author_system.md
hn_scraper/skills/who-is-hiring/: SKILL.md
samples/: sample_comment.json
tests/: test_naive.py  test_slice2.py  test_smoke.py
