[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hn-jobs-learning-scraper"
version = "0.1.0"
description = "Autobrowse-pattern learning scraper for Hacker News 'Who's Hiring' threads"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Joseph Kramer" }]
dependencies = [
    "anthropic>=0.40.0",
    "playwright>=1.48.0",
    "requests>=2.32.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.5.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.6.0",
]

[project.scripts]
hn-scraper = "hn_scraper.cli:main"

[tool.setuptools.packages.find]
include = ["hn_scraper*"]
exclude = ["tests*", "docs*", "samples*", "scratch*", "data*"]

[tool.setuptools.package-data]
hn_scraper = ["prompts/*.md", "skills/**/*.md"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "data", "scratch", "samples"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
